{
    "name": "TouchControls 1",
    "maps": [
        {
            "name": "Touch",
            "id": "fab4326a-a31b-4d9c-bbd2-e7ed1fa50d6b",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "438fbe44-a870-4f03-9275-dbefb875b55e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "be716a12-4ff6-4b80-b6ae-5219b8900cde",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "0eb71ae4-5838-46cc-beef-aa40ad68a480",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondTouch",
                    "type": "Button",
                    "id": "849db13a-220c-4472-9a5a-7edf95c79b57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "SecondTouchPosition",
                    "type": "PassThrough",
                    "id": "648abb75-24c5-468b-9140-9c303e72658f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b4a864c1-4a5a-4e77-853c-e32897304f2f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d3ea010-56e1-4c1b-add2-bf549f603719",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "add46f85-763a-4125-aeb8-55ae55841d71",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d500810-cbb3-4c71-908a-54f5ae05b201",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4eee615-d2ff-4b27-8b06-7d7231321e0e",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}